--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "esbuild": {
       "require": "./dist/esbuild.js",
       "import": "./dist/esbuild.mjs"
+    },
+    "vite": {
+      "require": "./dist/vite.js",
+      "import": "./dist/vite.mjs"
     }
   },
   "scripts": {
@@ -26,6 +30,7 @@
     "pkgroll": "^2.5.0",
     "rollup": "^4.22.5",
     "typescript": "^5.6.2",
+    "vite": "^5.4.8",
     "vitest": "^2.1.1",
     "webpack": "^5.95.0",
     "webpack-cli": "^5.1.4"
