--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     "rspack": {
       "require": "./dist/rspack.js",
       "import": "./dist/rspack.mjs"
+    },
+    "rolldown": {
+      "require": "./dist/rolldown.js",
+      "import": "./dist/rolldown.mjs"
     }
   },
   "scripts": {
@@ -34,6 +38,7 @@
     "@types/node": "14",
     "esbuild": "^0.24.0",
     "pkgroll": "^2.5.0",
+    "rolldown": "^0.13.2",
     "rollup": "^4.22.5",
     "typescript": "^5.6.2",
     "vite": "^5.4.8",
