--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,5 +1,11 @@
 name: 'Build & Test'
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+env:
+  DEBUG: true
 
 jobs:
   build:
