--- a/package.json
+++ b/package.json
@@ -26,6 +26,10 @@
     "rolldown": {
       "require": "./dist/cjs/rolldown.js",
       "import": "./dist/esm/rolldown.mjs"
+    },
+    "parcel": {
+      "require": "./dist/cjs/parcel.js",
+      "import": "./dist/esm/parcel.js"
     }
   },
   "scripts": {
@@ -42,6 +46,7 @@
     "@types/node": "14",
     "esbuild": "^0.24.0",
     "prettier": "^3.3.3",
+    "parcel": "^2.12.0",
     "rolldown": "^0.13.2",
     "rollup": "^4.22.5",
     "typescript": "^5.6.2",
