--- a/package.json
+++ b/package.json
@@ -43,6 +43,9 @@
   "bin": {
     "debugids": "cli.js"
   },
+  "engines": {
+    "node": ">=14"
+  },
   "scripts": {
     "build": "rollup --config rollup.config.mjs",
     "postbuild": "node cli.js ./dist",
