--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -20,5 +20,5 @@ jobs:
         run: yarn lint
       - name: Build
         run: yarn build
-      - name: Run Unit Tests
+      - name: Test
         run: yarn test
