--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@rollup/plugin-node-resolve": "^15.3.0",
     "@rspack/cli": "^1.0.8",
     "@rspack/core": "^1.0.8",
-    "@types/node": "14",
+    "@types/node": "^20.0.0",
     "esbuild": "^0.24.0",
     "prettier": "^3.3.3",
     "parcel": "^2.12.0",
@@ -31,6 +31,7 @@
     "test"
   ],
   "volta": {
-    "node": "20.18.0"
+    "node": "20.18.0",
+    "yarn": "1.22.22"
   }
 }
