--- a/package.json
+++ b/package.json
@@ -6,17 +6,17 @@
   "scripts": {
     "build": "rollup --config rollup.config.mjs",
     "test": "vitest run ./test/src/**/*.test.ts",
-    "lint": "prettier --check \"{packages,test}/**/*.{js,ts}\"",
-    "fix": "prettier --write \"{packages,test}/**/*.{js,ts}\""
+    "lint": "biome check",
+    "fix": "biome check --write"
   },
   "devDependencies": {
-    "@rollup/plugin-typescript": "^12.1.0",
+    "@biomejs/biome": "1.9.3",
     "@rollup/plugin-node-resolve": "^15.3.0",
+    "@rollup/plugin-typescript": "^12.1.0",
     "@rspack/cli": "^1.0.8",
     "@rspack/core": "^1.0.8",
     "@types/node": "^20.0.0",
     "esbuild": "^0.24.0",
-    "prettier": "^3.3.3",
     "parcel": "^2.12.0",
     "rolldown": "^0.13.2",
     "rollup": "^4.22.5",
@@ -26,10 +26,7 @@
     "webpack": "^5.95.0",
     "webpack-cli": "^5.1.4"
   },
-  "workspaces": [
-    "packages/*",
-    "test"
-  ],
+  "workspaces": ["packages/*", "test"],
   "volta": {
     "node": "20.18.0",
     "yarn": "1.22.22"
