--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -7,12 +7,13 @@ on:
 
 jobs:
   build:
-    name: Build & Test
+    name: Build
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
+          cache: yarn
           node-version-file: 'package.json'
       - name: Install
         run: yarn install
@@ -20,5 +21,32 @@ jobs:
         run: yarn lint
       - name: Build
         run: yarn build
-      - name: Test
+      - name: Upload Artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: ${{ github.sha }}
+          path: ./packages/**/dist/**/*
+
+  test:
+    name: Test Node.js v${{ matrix.version }}
+    runs-on: ubuntu-latest
+    needs: build
+    strategy:
+      fail-fast: false
+      matrix:
+        version: [18, 20, 22]
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          cache: yarn
+          node-version: ${{ matrix.version }}
+      - name: Install
+        run: yarn install
+      - name: Download Artifacts
+        uses: actions/download-artifact@v4
+        with:
+          path: ./packages
+          merge-multiple: true
+      - name: Run Unit Tests
         run: yarn test
