--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -53,7 +53,7 @@ jobs:
 
   test_browser:
     name: Test Browser
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     needs: build
     steps:
       - uses: actions/checkout@v4
