--- a/packages/browser/package.json
+++ b/packages/browser/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@debugids/browser",
   "version": "0.0.1",
+  "license": "MIT",
   "main": "./dist/cjs/index.js",
   "module": "./dist/esm/index.js",
   "types": "./dist/cjs/index.d.ts",
