--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@debugids/common",
   "version": "0.0.1",
+  "license": "MIT",
   "main": "./dist/cjs/index.js",
   "types": "./dist/cjs/index.d.ts",
   "exports": {
