--- a/packages/esbuild/package.json
+++ b/packages/esbuild/package.json
@@ -2,6 +2,9 @@
   "name": "@debugids/esbuild",
   "version": "0.0.1",
   "license": "MIT",
+  "homepage": "https://getsentry.github.io/debugids/",
+  "repository": "git://github.com/getsentry/javascript-debug-ids.git",
+  "sideEffects": false,
   "main": "./dist/cjs/index.js",
   "types": "./dist/cjs/index.d.ts",
   "exports": {
@@ -15,6 +18,10 @@
         "default": "./dist/cjs/index.js"
       }
     }
+  },
+  "scripts": {
+    "build": "rollup --config rollup.config.mjs",
+    "build:watch": "rollup --config rollup.config.mjs --watch"
   },
   "dependencies": {
     "@debugids/common": "0.0.1"
