--- a/packages/parcel/package.json
+++ b/packages/parcel/package.json
@@ -2,6 +2,9 @@
   "name": "@debugids/parcel-optimizer-debugids",
   "version": "0.0.1",
   "license": "MIT",
+  "homepage": "https://getsentry.github.io/debugids/",
+  "repository": "git://github.com/getsentry/javascript-debug-ids.git",
+  "sideEffects": false,
   "main": "./dist/cjs/index.js",
   "types": "./dist/cjs/index.d.ts",
   "exports": {
@@ -18,6 +21,10 @@
   },
   "engines": {
     "parcel": "^2.0.0"
+  },
+  "scripts": {
+    "build": "rollup --config rollup.config.mjs",
+    "build:watch": "rollup --config rollup.config.mjs --watch"
   },
   "dependencies": {
     "@parcel/plugin": "^2.0.0",
