chore: Add publish config

--- a/packages/browser/package.json
+++ b/packages/browser/package.json
@@ -26,5 +26,9 @@
   },
   "devDependencies": {
     "@debugids/common": "0.1.0"
+  },
+  "publishConfig": {
+    "access": "public",
+    "provenance": true
   }
 }
