--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -17,5 +17,9 @@
   },
   "dependencies": {
     "@debugids/common": "0.1.0"
+  },
+  "publishConfig": {
+    "access": "public",
+    "provenance": true
   }
 }
