--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -21,5 +21,9 @@
   },
   "scripts": {
     "build": "rollup --config rollup.config.mjs"
+  },
+  "publishConfig": {
+    "access": "public",
+    "provenance": true
   }
 }
