--- a/packages/rolldown/package.json
+++ b/packages/rolldown/package.json
@@ -25,5 +25,9 @@
   },
   "dependencies": {
     "@debugids/rollup": "0.1.0"
+  },
+  "publishConfig": {
+    "access": "public",
+    "provenance": true
   }
 }
