--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,6 +12,8 @@ concurrency: ${{ github.workflow }}-${{ github.ref }}
 jobs:
   publish:
     name: Publish
+    permissions:
+      id-token: write
     runs-on: ubuntu-latest
     if: |
       contains(github.event.head_commit.message, 'meta(changelog)') 
