--- a/packages/esbuild/package.json
+++ b/packages/esbuild/package.json
@@ -19,6 +19,7 @@
       }
     }
   },
+  "files": ["dist"],
   "scripts": {
     "build": "rollup --config rollup.config.mjs",
     "build:watch": "rollup --config rollup.config.mjs --watch"
