--- a/packages/rspack/package.json
+++ b/packages/rspack/package.json
@@ -25,7 +25,7 @@
     "build:watch": "rollup --config rollup.config.mjs --watch"
   },
   "dependencies": {
-    "@debugids/common": "0.1.0"
+    "@debugids/webpack": "0.1.0"
   },
   "publishConfig": {
     "access": "public",
