fix: Use files setting in package.json (#30)

--- a/packages/rspack/package.json
+++ b/packages/rspack/package.json
@@ -19,12 +19,13 @@
       }
     }
   },
+  "files": ["dist"],
   "scripts": {
     "build": "rollup --config rollup.config.mjs",
     "build:watch": "rollup --config rollup.config.mjs --watch"
   },
   "dependencies": {
-    "@debugids/common": "0.1.0"
+    "@debugids/webpack": "0.1.0"
   },
   "publishConfig": {
     "access": "public",
