--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -11,9 +11,7 @@
   "engines": {
     "node": ">=18"
   },
-  "files": [
-    "dist"
-  ],
+  "files": ["dist"],
   "scripts": {
     "build": "rollup --config rollup.config.mjs",
     "build:watch": "rollup --config rollup.config.mjs --watch"
