chore: Ignore formatting json files

--- a/biome.json
+++ b/biome.json
@@ -27,5 +27,10 @@
       "attributePosition": "auto",
       "bracketSpacing": true
     }
+  },
+  "json": {
+    "formatter": {
+      "enabled": false
+    }
   }
 }
